2011-10-16  Kaz Kylheku  <kaz@kylheku.com>

	* configure: reduced post-configure advice to just point
	to the INSTALL guide.

	* INSTALL: New file.

2011-10-16  Kaz Kylheku  <kaz@kylheku.com>

	* filter.c (trie_filter_string): Fix warning about uninitialized
	variable (not a bug, but compiler cannot prove that).

2011-10-15  Kaz Kylheku  <kaz@kylheku.com>

	Task #11425. Refactoring match_files to make it easier to
	break up into subfunctions. Arguments are packaged into a structure,
	so that subfunctions won't have to all have big argument lists.

	* match.c (h_directive_table, v_directive_table): New variables.
	(match_files_ctx): New structure.
	(mf_all, mf_args, mf_data, mf_spec, mf_spec_bindings): New functions.
	(match_files): Takes only one argument now, the context
	structure. data_lineno variable is a dynamic number.
	Recursive calls to match_files are handled by creating contexts
	as appropriate with the helper functions.
	The old local variable data is now part of the context.
	(syms_init, dir_tables_init): New functions.
	(match_init): Just calls syms_init and dir_tables_init.

2011-10-15  Kaz Kylheku  <kaz@kylheku.com>

	Fixed broken GC on x86_64 (Ubuntu 11, gcc 4.5.2). 
	The issues is that due to the aggressive function inlining
	in the gc module, the mark_mem_region function is not real
	subroutine. The address of its local variable &gc_stack_top
	ended up excluding the machine context saved by setjmp in
	the parent function. I.e. the buffer was not between the
	computed stack top and bottom. Thus registers were not being
	scanned for references to values. I added a little abstraction
	to the machine context in the process of fixing this.

	* gc.c (struct mach_context, mach_context_t): New type.
	(save_context): New macro.
	(mark): Takes two new arguments, pointer to the stack top and
	machine context. It scans the machine context explicitly rather
	than relying it to be on the stack, between the top and bottom.